# datarecovery

./: .gitignore  CHANGELOG.md  README.md  meson.build
data/: datarecovery.desktop.in  datarecovery.policy  meson.build
data/icons/: meson.build
src/: about.py  application.py  block_devices.py  datarecovery.gresource.xml  datarecovery.in  device_columnview.py  device_dropdown.py  duplicates.py  image.py  image_helper.py  log.py  main.py  meson.build  mounted_check.py  organise_files.py  partition_guids.py  preflight.py  recover.py  window.py
src/gtk/: window.cmb  window.ui
